Working server ready for running ArcGIS Server Installer

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,7 @@
   vars:
     packages:
       - "gettext"
+      - "libxtst6"
 
 - name: "Configure Firewall"
   ufw:
@@ -14,4 +15,26 @@
   with_items:
     - "6080"
     - "6443"
+
+- name: "Create ArcGIS User"
+  user:
+    name:     "{{ arcgis_system_user }}"
+    password: "{{ arcgis_system_pass }}"
+    comment:  "ArcGIS System User"
+    shell:    "/bin/bash"
+    state:    "present"
+    create_home: "yes"
+
+- name: "Set resource limits for ArcGIS"
+  template:
+    src: "limits.conf"
+    dest: "/etc/security/limits.conf"
+
+- name: "Create ArcGIS directory"
+  file:
+    path:  "/srv/arcgis"
+    state: "directory"
+    owner: "arcgis"
+    group: "staff"
+    mode:  "u=rwX,g=rwXs,o=rX"
 ...
