We now install WebAdaptor on the same machine
Added documentation to walk through all the installation
stuff not covered by ansible.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -16,5 +16,5 @@ galaxy_info:
     - "Esri"
 
 dependencies:
-  - { role: "City-of-Bloomington.linux"      }
+  - { role: "City-of-Bloomington.tomcat" }
 ...
