Install Conda and use it to install arcpy
Updates #1

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,7 @@
   vars:
     packages:
       - "gettext"
+      - "python3-psycopg2"
 
 - name: "Configure Firewall"
   ufw:
@@ -23,8 +24,18 @@
     state:       "present"
     create_home: "yes"
     home:        "/srv/arcgis"
+# We are not setting the password here, as we do not know the crypted value
 
 - name: "Set resource limits for ArcGIS"
   template:
     src: "limits.conf"
     dest: "/etc/security/limits.conf"
+
+- name: "Install Conda"
+  include_tasks: "conda.yml"
+
+- name: "Install ArcPy"
+  shell: "source /opt/conda/etc/profile.d/conda.sh && conda install -c esri arcgis-server-10.6-py3"
+  args:
+    executable: "/bin/bash"
+...
